--- a/roseAI.html
+++ b/roseAI.html
@@ -30,7 +30,7 @@
 <br>
     <form id="login-form">
         <input type="text" name="fileCode" id="username-field" class="fileCode-form-field" placeholder="File Code"><br>
-        <input type="submit" value="Login" id="login-form-submit">
+        <input type="submit" value="Search" id="login-form-submit">
     </form>
 
 
