fixed email in bennyemail for sammy

--- a/fadeAccess/bennyEmail2.html
+++ b/fadeAccess/bennyEmail2.html
@@ -40,7 +40,7 @@
     <br><br>
     Also, its no secret that this 'agency' is more than just that, its a family. And being isolated
     from your family can be a big deal. So please, if you ever need anything, just let me know.
-    We have to stay off of the FADE network for the time being, so my new email is murderofcrows@gmail.com.
+    We have to stay off of the FADE network for the time being, so my new email is samurderofcrows@gmail.com.
     <br><br>
     Hang in there Benny! And hey, at least now I'll have time to read up all that literature you keep recommending to me!
     <br><br>
